FIX: using h-screen in root causes problems on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,6 @@
 
 :root {
   position: relative;
-  min-height: 100%;
   height: 100%;
   
   /* Default font color */
